# Face_report

./: README.md  setup.cfg
Reference/.ipynb_checkpoints/: Test analise image2.0-checkpoint.ipynb
inputs/: .fuse_hidden0000006000000002  .fuse_hidden0000006700000003  .fuse_hidden0000008000000001
src/: Face_reco_lab.ipynb  v1.py  v2.py
src/Face_report.egg-info/: PKG-INFO  SOURCES.txt
