[metadata]
name = Face_report
version = 1.0.0
author = Boris Terzic
description = Face report
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BTerzic22/Face_report
#license = file:LICENSE
classifiers =
    License :: PSFL
    Natural Language :: English
    Programming Language :: Python :: 3.9.7
    Topic :: Scientific/Engineering :: Image Processing

[options]
package_dir = 
    = src
